objects/A1_C360API_creds__mdt.object
<CustomObject>
    <description>Purpose of this MDT is to store the brand specific 360 API credentials specific to the environment.</description>
    <fields>
        <fullName>Base64__c</fullName>
        <label>Base64</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BrandId__c</fullName>
        <label>BrandId</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TenantId__c</fullName>
        <label>TenantId</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>A1 C360API creds</label>
    <listViews>
        <fullName>AllRecords</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>BrandId__c</columns>
        <columns>TenantId__c</columns>
        <columns>Username__c</columns>
        <columns>Password__c</columns>
        <columns>Base64__c</columns>
        <filterScope>Everything</filterScope>
        <label>AllRecords</label>
    </listViews>
    <pluralLabel>A1 C360API creds</pluralLabel>
</CustomObject>